remote vote from 'auth/*' url

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,8 +24,9 @@
 			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
-		<!-- <async-supported>true</async-supported> -->
+		<async-supported>true</async-supported>
 	</servlet>
+
 
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>
