--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -7,7 +7,7 @@ log4j.logger.org.apache.ibatis=INFO
 # Spring 
 log4j.logger.org.springframework=INFO
 #MongoDB Stuff
-com.mongodb.diagnostics=INFO
+log4j.logger.com.mongodb.diagnostics=INFO
 
 
 ##################################
@@ -22,7 +22,7 @@ log4j.appender.dev.layout.ConversionPattern=%p - %l %m%n
 ##################################
 ##                         auth
 ##################################
-log4j.appender.auth=org.apache.log4j.RollingFileAppender
+log4j.appender.auth=org.apache.log4j.RollingFileAppenderwwww
 log4j.appender.auth.File =auth.log 
 log4j.appender.auth.Append = true
 log4j.appender.auth.Threshold = INFO 
